--- a/CoreUtilities/CalcPad/CalcPadHTML/CalcPad.html
+++ b/CoreUtilities/CalcPad/CalcPadHTML/CalcPad.html
@@ -49,9 +49,10 @@
   <!--  -->
   <!-- Menus -->
   <div id="calcPadMenu" class="divMenu" style="width:120px">
-    <div class="titleHighlight">CalcPad Menu</div>
+    <div class="titleHighlight">Options Menu</div>
     <div><hr /></div>
     <div id="doCalcs">Do Calculations</div>
+    <div id="help">Help</div>
   </div>
   <script>
     CalcPadEvent.SetEvents();
