--- a/CoreUtilities/CalcPad/CalcPadHTML/Value.html
+++ b/CoreUtilities/CalcPad/CalcPadHTML/Value.html
@@ -19,7 +19,7 @@
     the following format:
   </p>
   <p>
-    Value: DataItemName
+    Value: DataItemName Rounding
   </p>
   <p>
     The Value lines will contain the current Data Item value after the
