--- a/CoreUtilities/CalcPad/CalcPadHTML/Value.html
+++ b/CoreUtilities/CalcPad/CalcPadHTML/Value.html
@@ -62,5 +62,27 @@
     Value: Communities Ceiling
     Value: Villages Ceiling
     Value: Taps Ceiling</pre>
+
+    <p>
+      This is a set of calculations for common metric units of length.
+    </p>
+
+    <pre>
+    kilometer|km
+    meter|m
+    centimeter|cm
+    milimeter|mm
+
+    kilometer is 1000 m
+    meter is 100 cm
+    centimeter is 10 mm
+
+    meter = 1000
+
+    Value: km
+    Value: m
+    Value: cm
+    Value: mm</pre>
+</pre>
 </body>
 </html>
