--- a/CoreUtilities/CalcPad/CalcPadHTML/DataItem.html
+++ b/CoreUtilities/CalcPad/CalcPadHTML/DataItem.html
@@ -4,46 +4,66 @@
 <!-- DataItem.html -->
 <html lang="en">
 <head>
-  <title>CalcPad</title>
+  <title>DataItem</title>
   <meta charset="utf-8" />
   <meta name="description" content="A Calculation Pad page." />
   <meta name="author" content="Lester J. Clark" />
   <meta name="viewport" content="width=device-width initial-scale=1" />
+  <link rel='stylesheet' type='text/css' href='CSS/CodeDoc.css' />
 </head>
 <body>
-  <p>
-    Data Item Declaration
-  </p>
-  <p>
-    A Data Item is a named item for storing the data values and other
-    information. In programming terms these are like variables.
-  </p>
-  <p>
-    A Data Item line contains at least one name and the vertical bar "|"
-    character like the following line.
-  </p>
-  <p>
-    DataItemName|
-  </p>
-  <p>
-    The Data Item Declaration is identified by the vertical bar "|" at the end of
-    a single Data Item name or between the name and alternate name.
-  </p>
-  <p>
-    Once declared, a Data Item can appear in any of the other statement types.
-  </p>
-  <p>
-    A Data Item can have an alternate name. It can be used with either name.
-    This is allowed for readability and is often used with the plural name.
-    Enter the alternate name after the vertical bar.
-  </p>
-  <p>
-    Here are some Data Item delarations:
-  </p>
-  <pre>
+  <div class="page">
+    <br />
+    <div class="PathText">
+      / <a href="CalcPadHelp.html">Home</a>
+      / DataItem
+    </div>
+    <br />
+    <div id='Header'>
+      <div id='Title'>Data Item Declaration</div>
+    </div>
+    <div class='Text'>
+      <p>
+        A Data Item is a named item for storing the data values and other
+        information. In programming terms these are like variables.
+      </p>
+      <p>
+        A Data Item line contains at least one name and the vertical bar "|"
+        character like the following line.
+      </p>
+      <p>
+        DataItemName|
+      </p>
+      <p>
+        The Data Item Declaration is identified by the vertical bar "|" at the end of
+        a single Data Item name or between the name and alternate name.
+      </p>
+      <p>
+        Once declared, a Data Item can appear in any of the other statement types.
+      </p>
+      <p>
+        A Data Item can have an alternate name. It can be used with either name.
+        This is allowed for readability and is often used with the plural name.
+        Enter the alternate name after the vertical bar.
+      </p>
+      <p>
+        Here are some Data Item delarations:
+      </p>
+      <pre>
   Person|Persons
   Family|Families
   Community|Communities
   Village|Villages</pre>
+    </div>
+    <!-- Text -->
+    <div class="PathText">
+      / <a href="CalcPadHelp.html">Home</a>
+      / DataItem
+    </div>
+    <br />
+    <div class='SmallText'>Copyright &copy; Lester J. Clark  and Contributors.</div>
+    <div class='SmallText'>Licensed under the MIT License.</div>
+  </div>
+  <!-- page -->
 </body>
 </html>
