--- a/CoreUtilities/CalcPad/CalcPadHTML/Formula.html
+++ b/CoreUtilities/CalcPad/CalcPadHTML/Formula.html
@@ -4,41 +4,61 @@
 <!-- Formula.html -->
 <html lang="en">
 <head>
-  <title>CalcPad</title>
+  <title>Formula</title>
   <meta charset="utf-8" />
   <meta name="description" content="A Calculation Pad page." />
   <meta name="author" content="Lester J. Clark" />
   <meta name="viewport" content="width=device-width initial-scale=1" />
+  <link rel='stylesheet' type='text/css' href='CSS/CodeDoc.css' />
 </head>
 <body>
-  <p>
-    Conversion Formula
-  </p>
-  <p>
-    A Conversion Formula is used to define a relationship between Data Items. It
-    has the following format.
-  </p>
-  <p>
-    LeftItemName is # RightItemName
-  </p>
-  <p>
-    A Conversion Formula is identified by the "is" keyword in the second
-    position.
-  </p>
-  <p>
-    The LeftItem will consist of a specific number of the RightItem.
-  </p>
-  <p>
-    Family is 5 Persons
-  </p>
-  <p>
-    The RightItem must always be a smaller part of the LeftItem.
-  </p>
-  <p>
-    Here are two additional Conversion Formulas:
-  </p>
-  <pre>
+  <div class="page">
+    <br />
+    <div class="PathText">
+      / <a href="CalcPadHelp.html">Home</a>
+      / Formula
+    </div>
+    <br />
+    <div id='Header'>
+      <div id='Title'>Converson Formula</div>
+    </div>
+    <div class='Text'>
+      <p>
+        A Conversion Formula is used to define a relationship between Data Items. It
+        has the following format.
+      </p>
+      <p>
+        LeftItemName is # RightItemName
+      </p>
+      <p>
+        A Conversion Formula is identified by the "is" keyword in the second
+        position.
+      </p>
+      <p>
+        The LeftItem will consist of a specific number of the RightItem.
+      </p>
+      <p>
+        Family is 5 Persons
+      </p>
+      <p>
+        The RightItem must always be a smaller part of the LeftItem.
+      </p>
+      <p>
+        Here are two additional Conversion Formulas:
+      </p>
+      <pre>
   Community is 16 Families
   Village is 4 Communities</pre>
+    </div>
+    <!-- Text -->
+    <div class="PathText">
+      / <a href="CalcPadHelp.html">Home</a>
+      / Formula
+    </div>
+    <br />
+    <div class='SmallText'>Copyright &copy; Lester J. Clark  and Contributors.</div>
+    <div class='SmallText'>Licensed under the MIT License.</div>
+  </div>
+  <!-- page -->
 </body>
 </html>
