--- a/CoreUtilities/CalcPad/CalcPadHTML/Value.html
+++ b/CoreUtilities/CalcPad/CalcPadHTML/Value.html
@@ -4,45 +4,54 @@
 <!-- CalcPad.html -->
 <html lang="en">
 <head>
-  <title>CalcPad</title>
+  <title>Value</title>
   <meta charset="utf-8" />
   <meta name="description" content="A Calculation Pad page." />
   <meta name="author" content="Lester J. Clark" />
   <meta name="viewport" content="width=device-width initial-scale=1" />
+  <link rel='stylesheet' type='text/css' href='CSS/CodeDoc.css' />
 </head>
 <body>
-  <p>
-    Output Value
-  </p>
-  <p>
-    An Output Value is used to display the current value of a Data Item. It has
-    the following format:
-  </p>
-  <p>
-    Value: DataItemName Rounding
-  </p>
-  <p>
-    The Value lines will contain the current Data Item value after the
-    "Do Calculations" menu item is selected from the "Options" menu.
-  </p>
-  <p>
-    Value: DataItemName Rounding (CurrentValue)
-  </p>
-  <p>
-    The Rounding value is optional and can be:
-  </p>
-  <p>
-    Ceiling - Rounds up to the next whole (integer) value.
-  </p>
-  <p>
-    Floor - Rounds down to the whole (integer) value.
-  </p>
-  <p>
-    Round - If .5 or higher, rounds up to the next integer else rounds down
-    to the integer value..
-  </p>
-  <p>
-    The following statements will show the results in the current values.
+  <div class="page">
+    <br />
+    <div class="PathText">
+      / <a href="CalcPadHelp.html">Home</a>
+      / Value
+    </div>
+    <br />
+    <div id='Header'>
+      <div id='Title'>Value Statement</div>
+    </div>
+    <div class='Text'>
+      <p>
+        An Output Value is used to display the current value of a Data Item. It has
+        the following format:
+      </p>
+      <p>
+        Value: DataItemName Rounding
+      </p>
+      <p>
+        The Value lines will contain the current Data Item value after the
+        "Do Calculations" menu item is selected from the "Options" menu.
+      </p>
+      <p>
+        Value: DataItemName Rounding (CurrentValue)
+      </p>
+      <p>
+        The Rounding value is optional and can be:
+      </p>
+      <p>
+        Ceiling - Rounds up to the next whole (integer) value.
+      </p>
+      <p>
+        Floor - Rounds down to the whole (integer) value.
+      </p>
+      <p>
+        Round - If .5 or higher, rounds up to the next integer else rounds down
+        to the integer value..
+      </p>
+      <p>
+        The following statements will show the results in the current values.
 <pre>
   Person|Persons
   Family|Families
@@ -63,11 +72,11 @@
   Value: Villages Ceiling
   Value: Taps Ceiling</pre>
 
-    <p>
-      This is a set of calculations for common metric units of length.
-    </p>
+      <p>
+        This is a set of calculations for common metric units of length.
+      </p>
 
-    <pre>
+      <pre>
   kilometer|km
   meter|m
   centimeter|cm
@@ -83,6 +92,16 @@
   Value: m
   Value: cm
   Value: mm</pre>
-</pre>
+    </div>
+    <!-- Text -->
+    <div class="PathText">
+      / <a href="CalcPadHelp.html">Home</a>
+      / Value
+    </div>
+    <br />
+    <div class='SmallText'>Copyright &copy; Lester J. Clark  and Contributors.</div>
+    <div class='SmallText'>Licensed under the MIT License.</div>
+  </div>
+  <!-- page -->
 </body>
 </html>
