--- a/CoreUtilities/CalcPad/CalcPadHTML/Assignment.html
+++ b/CoreUtilities/CalcPad/CalcPadHTML/Assignment.html
@@ -4,46 +4,66 @@
 <!-- Assignment.html -->
 <html lang="en">
 <head>
-  <title>CalcPad</title>
+  <title>Assignment</title>
   <meta charset="utf-8" />
   <meta name="description" content="A Calculation Pad page." />
   <meta name="author" content="Lester J. Clark" />
   <meta name="viewport" content="width=device-width initial-scale=1" />
+  <link rel='stylesheet' type='text/css' href='CSS/CodeDoc.css' />
 </head>
 <body>
-  <p>
-    Assignment
-  </p>
-  <p>
-    An Assignment is used to assign a value to a Data item. It has the following
-    format:
-  </p>
-  <pre>
+  <div class="page">
+    <br />
+    <div class="PathText">
+      / <a href="CalcPadHelp.html">Home</a>
+      / Assignment
+    </div>
+    <br />
+    <div id='Header'>
+      <div id='Title'>Assignment Statement</div>
+    </div>
+    <div class='Text'>
+      <p>
+        An Assignment is used to assign a value to a Data item. It has the following
+        format:
+      </p>
+      <pre>
   DataItemName = #
   or
   DataItemName = DataItemName/Number Operation DataItemName/Number</pre>
-  <p>
-    The second and fourth positions can be a DataItem name or a number.
-  </p>
-  <p>
-    The operation can be one of the following: "+", "-", "*" or "/".
-  </p>
-  <p>
-    The value is assigned to the left side Data Item.
-  </p>
-  <p>
-    The following assignment sets the value for Family|Families and all related
-    Data Items based on the Conversion Formulas.
-  </p>
-  <p>
-    Families = 100
-  </p>
-  <p>
-    The following assignment calclulaes the required water taps at one for each
-    125 Persons.
-  </p>
-  <p>
-    Taps = Persons / 125
-  </p>
+      <p>
+        The second and fourth positions can be a DataItem name or a number.
+      </p>
+      <p>
+        The operation can be one of the following: "+", "-", "*" or "/".
+      </p>
+      <p>
+        The value is assigned to the left side Data Item.
+      </p>
+      <p>
+        The following assignment sets the value for Family|Families and all related
+        Data Items based on the Conversion Formulas.
+      </p>
+      <p>
+        Families = 100
+      </p>
+      <p>
+        The following assignment calclulaes the required water taps at one for each
+        125 Persons.
+      </p>
+      <p>
+        Taps = Persons / 125
+      </p>
+    </div>
+    <!-- Text -->
+    <div class="PathText">
+      / <a href="CalcPadHelp.html">Home</a>
+      / Assignment
+    </div>
+    <br />
+    <div class='SmallText'>Copyright &copy; Lester J. Clark  and Contributors.</div>
+    <div class='SmallText'>Licensed under the MIT License.</div>
+  </div>
+  <!-- page -->
 </body>
 </html>
