--- a/CoreUtilities/CalcPad/CalcPadHTML/Assignment.html
+++ b/CoreUtilities/CalcPad/CalcPadHTML/Assignment.html
@@ -35,7 +35,7 @@
         The second and fourth positions can be a DataItem name or a number.
       </p>
       <p>
-        The operation can be one of the following: "+", "-", "*" or "/".
+        The Operation can be one of the following: "+", "-", "*" or "/".
       </p>
       <p>
         The value is assigned to the left side Data Item.
@@ -55,7 +55,7 @@
         Taps = Persons / 125
       </p>
     </div>
-    <!-- Text -->
+    <!-- End Text -->
     <div class="PathText">
       / <a href="CalcPadHelp.html">Home</a>
       / Assignment
@@ -64,6 +64,6 @@
     <div class='SmallText'>Copyright &copy; Lester J. Clark  and Contributors.</div>
     <div class='SmallText'>Licensed under the MIT License.</div>
   </div>
-  <!-- page -->
+  <!-- End page -->
 </body>
 </html>
