--- a/CoreUtilities/CalcPad/CalcPadHTML/CalcPadHelp.html
+++ b/CoreUtilities/CalcPad/CalcPadHTML/CalcPadHelp.html
@@ -39,7 +39,7 @@
       <a href="Assignment.html">Assignment</a><br />
       <a href="Value.html">Output Value</a><br />
     </div>
-    <!-- Text -->
+    <!-- End Text -->
     <br />
     <div class="PathText">
       / Home
@@ -48,6 +48,6 @@
     <div class='SmallText'>Copyright &copy; Lester J. Clark  and Contributors.</div>
     <div class='SmallText'>Licensed under the MIT License.</div>
   </div>
-  <!-- page -->
+  <!-- End page -->
 </body>
 </html>
