--- a/CoreUtilities/CalcPad/CalcPadHTML/DataItem.html
+++ b/CoreUtilities/CalcPad/CalcPadHTML/DataItem.html
@@ -39,7 +39,7 @@
         a single Data Item name or between the name and alternate name.
       </p>
       <p>
-        Once declared, a Data Item can appear in any of the other statement types.
+        Once declared, a Data Item can appear in any other statement type.
       </p>
       <p>
         A Data Item can have an alternate name. It can be used with either name.
@@ -55,7 +55,7 @@
   Community|Communities
   Village|Villages</pre>
     </div>
-    <!-- Text -->
+    <!-- End Text -->
     <div class="PathText">
       / <a href="CalcPadHelp.html">Home</a>
       / DataItem
@@ -64,6 +64,6 @@
     <div class='SmallText'>Copyright &copy; Lester J. Clark  and Contributors.</div>
     <div class='SmallText'>Licensed under the MIT License.</div>
   </div>
-  <!-- page -->
+  <!-- End page -->
 </body>
 </html>
