--- a/CoreUtilities/CalcPad/CalcPadHTML/Formula.html
+++ b/CoreUtilities/CalcPad/CalcPadHTML/Formula.html
@@ -50,7 +50,7 @@
   Community is 16 Families
   Village is 4 Communities</pre>
     </div>
-    <!-- Text -->
+    <!-- End Text -->
     <div class="PathText">
       / <a href="CalcPadHelp.html">Home</a>
       / Formula
@@ -59,6 +59,6 @@
     <div class='SmallText'>Copyright &copy; Lester J. Clark  and Contributors.</div>
     <div class='SmallText'>Licensed under the MIT License.</div>
   </div>
-  <!-- page -->
+  <!-- End page -->
 </body>
 </html>
