--- a/CoreUtilities/CalcPad/CalcPadHTML/Value.html
+++ b/CoreUtilities/CalcPad/CalcPadHTML/Value.html
@@ -93,7 +93,7 @@
   Value: cm
   Value: mm</pre>
     </div>
-    <!-- Text -->
+    <!-- End Text -->
     <div class="PathText">
       / <a href="CalcPadHelp.html">Home</a>
       / Value
@@ -102,6 +102,6 @@
     <div class='SmallText'>Copyright &copy; Lester J. Clark  and Contributors.</div>
     <div class='SmallText'>Licensed under the MIT License.</div>
   </div>
-  <!-- page -->
+  <!-- End page -->
 </body>
 </html>
