--- a/CoreUtilities/CalcPad/CalcPadHTML/Value.html
+++ b/CoreUtilities/CalcPad/CalcPadHTML/Value.html
@@ -81,17 +81,20 @@
   meter|m
   centimeter|cm
   milimeter|mm
+  feet|ft
 
   kilometer is 1000 m
   meter is 100 cm
   centimeter is 10 mm
+  feet is 0.3048 m
 
   meter = 1000
 
   Value: km
   Value: m
   Value: cm
-  Value: mm</pre>
+  Value: mm
+  Value: ft</pre>
     </div>
     <!-- End Text -->
     <div class="PathText">
