--- a/CoreUtilities/CalcPad/CalcPadHTML/Formula.html
+++ b/CoreUtilities/CalcPad/CalcPadHTML/Formula.html
@@ -24,15 +24,11 @@
     </div>
     <div class='Text'>
       <p>
-        A Conversion Formula is used to define a relationship between Data Items. It
-        has the following format.
+        A Conversion Formula is used to define a relationship between Data
+        Items. It has the following format.
       </p>
       <p>
         LeftItemName is # RightItemName
-      </p>
-      <p>
-        A Conversion Formula is identified by the "is" keyword in the second
-        position.
       </p>
       <p>
         The LeftItem will consist of a specific number of the RightItem.
