--- a/CoreUtilities/CalcPad/CalcPadHTML/Value.html
+++ b/CoreUtilities/CalcPad/CalcPadHTML/Value.html
@@ -52,30 +52,52 @@
       </p>
       <p>
         The following statements will show the results in the current values.
+      </p>
+      <h5>Rapid Needs Assesment Calculation Template</h5>
 <pre>
+  // DataItem Definitions
   Person|Persons
   Family|Families
   Community|Communities
   Village|Villages
+  Tent|Tents
+  LitersOfWaterPerDay
   Tap|Taps
+  WaterCollectionContainer|WaterCollectionContainers
+  WaterStorageContainer|WaterStorageContainers
+  Toilet|Toilets
+  RefuseContainer|RefuseContainers
 
+  // Conversion Formulas
   Family is 5 Persons
   Community is 16 Families
   Village is 4 Communities
 
+  // Initialize Values
   Families = 100
-  Taps = Persons / 125
 
+  // Calculate Needs
+  Tents = Persons / 6
+  LitersOfWaterPerDay = 15 * Persons
+  Taps = Persons / 125
+  WaterCollectionContainers = Families * 2
+  WaterStorageContainers = Families
+  Toilets = Persons / 20
+  RefuseContainers = Families / 10
+
+  // Show Calculated Needs
   Value: Persons Ceiling
   Value: Families Ceiling
   Value: Communities Ceiling
   Value: Villages Ceiling
-  Value: Taps Ceiling</pre>
-
-      <p>
-        This is a set of calculations for common metric units of length.
-      </p>
-
+  Value: Tents Ceiling
+  Value: LitersOfWaterPerDay
+  Value: Taps Ceiling
+  Value: WaterCollectionContainers Ceiling
+  Value: WaterStorageContainers Ceiling
+  Value: Toilets Ceiling
+  Value: RefuseContainers Ceiling</pre>
+      <h5>Sample Units of Length Calculation Template</h5>
       <pre>
   kilometer|km
   meter|m
