--- a/CoreUtilities/CalcPad/CalcPadHTML/Value.html
+++ b/CoreUtilities/CalcPad/CalcPadHTML/Value.html
@@ -51,6 +51,9 @@
         to the integer value..
       </p>
       <p>
+        Round:number - Rounds to the provided number of decimal places.
+      </p>
+      <p>
         The following statements will show the results in the current values.
       </p>
       <h5>Rapid Needs Assesment Calculation Template</h5>
@@ -93,8 +96,8 @@
   Value: Tents Ceiling
   Value: LitersOfWaterPerDay
   Value: Taps Ceiling
-  Value: WaterCollectionContainers Ceiling
-  Value: WaterStorageContainers Ceiling
+  Value: WaterCollectionContainers
+  Value: WaterStorageContainers
   Value: Toilets Ceiling
   Value: RefuseContainers Ceiling</pre>
       <h5>Sample Units of Length Calculation Template</h5>
