--- a/CoreUtilities/CalcPad/CalcPadHTML/DataItem.html
+++ b/CoreUtilities/CalcPad/CalcPadHTML/DataItem.html
@@ -15,6 +15,7 @@
   <div class="page">
     <br />
     <div class="PathText">
+      / <a href="CalcPad.html">Calculations</a>
       / <a href="CalcPadHelp.html">Home</a>
       / DataItem
     </div>
@@ -57,6 +58,7 @@
     </div>
     <!-- End Text -->
     <div class="PathText">
+      / <a href="CalcPad.html">Calculations</a>
       / <a href="CalcPadHelp.html">Home</a>
       / DataItem
     </div>
