--- a/CoreUtilities/CalcPad/CalcPadHTML/Formula.html
+++ b/CoreUtilities/CalcPad/CalcPadHTML/Formula.html
@@ -15,6 +15,7 @@
   <div class="page">
     <br />
     <div class="PathText">
+      / <a href="CalcPad.html">Calculations</a>
       / <a href="CalcPadHelp.html">Home</a>
       / Formula
     </div>
@@ -37,9 +38,6 @@
         Family is 5 Persons
       </p>
       <p>
-        The RightItem must always be a smaller part of the LeftItem.
-      </p>
-      <p>
         Here are two additional Conversion Formulas:
       </p>
       <pre>
@@ -48,6 +46,7 @@
     </div>
     <!-- End Text -->
     <div class="PathText">
+      / <a href="CalcPad.html">Calculations</a>
       / <a href="CalcPadHelp.html">Home</a>
       / Formula
     </div>
