--- a/CoreUtilities/CalcPad/CalcPadHTML/Value.html
+++ b/CoreUtilities/CalcPad/CalcPadHTML/Value.html
@@ -15,6 +15,7 @@
   <div class="page">
     <br />
     <div class="PathText">
+      / <a href="CalcPad.html">Calculations</a>
       / <a href="CalcPadHelp.html">Home</a>
       / Value
     </div>
@@ -123,6 +124,7 @@
     </div>
     <!-- End Text -->
     <div class="PathText">
+      / <a href="CalcPad.html">Calculations</a>
       / <a href="CalcPadHelp.html">Home</a>
       / Value
     </div>
