--- a/CoreUtilities/CalcPad/CalcPadHTML/CalcPad.html
+++ b/CoreUtilities/CalcPad/CalcPadHTML/CalcPad.html
@@ -53,6 +53,8 @@
     <div class="titleHighlight">Options Menu</div>
     <div><hr /></div>
     <div id="doCalcs">Do Calculations</div>
+    <div id="setLines">Set Lines</div>
+    <div><hr /></div>
     <div id="needs">Needs Assesment</div>
     <div id="help">Help</div>
   </div>
