--- a/CoreUtilities/CalcPad/CalcPadHTML/CalcPadHelp.html
+++ b/CoreUtilities/CalcPad/CalcPadHTML/CalcPadHelp.html
@@ -15,6 +15,7 @@
   <div class="page">
     <br />
     <div class="PathText">
+      / <a href="CalcPad.html">Calculations</a>
       / Home
     </div>
     <br />
@@ -42,6 +43,7 @@
     <!-- End Text -->
     <br />
     <div class="PathText">
+      / <a href="CalcPad.html">Calculations</a>
       / Home
     </div>
     <br />
