--- a/CoreUtilities/CalcPad/CalcPadHTML/Assignment.html
+++ b/CoreUtilities/CalcPad/CalcPadHTML/Assignment.html
@@ -29,7 +29,7 @@
         format:
       </p>
       <pre>
-  DataItemName = #
+  DataItemName = Number
   or
   DataItemName = DataItemName/Number Operation DataItemName/Number</pre>
       <p>
