--- a/CoreUtilities/CalcPad/CalcPadHTML/Assignment.html
+++ b/CoreUtilities/CalcPad/CalcPadHTML/Assignment.html
@@ -36,7 +36,10 @@
         The second and fourth positions can be a DataItem name or a number.
       </p>
       <p>
-        The Operation can be one of the following: "+", "-", "*" or "/".
+        The Operation can be one of the following: "+", "-", "*", "/" or "^".
+      </p>
+      <p>
+        The Operation "^" raises the first value to the power of the second value.
       </p>
       <p>
         The value is assigned to the left side Data Item.
