--- a/CalcPad.html
+++ b/CalcPad.html
@@ -18,6 +18,7 @@
   <!-- cell, firstCell, labelRight, row, table -->
   <link rel="stylesheet" type="text/css" href="CSS/TableLayout.css" />
   <script src="Script/LJCCommon.js"></script>
+  <script src="Script/StringBuilder.js"></script>
   <script src="Script/TextAreaCode.js"></script>
   <script src="Script/CalcPadCode.js"></script>
   <script src="Script/CalcPadError.js"></script>
@@ -52,6 +53,9 @@
     <div class="titleHighlight">Options Menu</div>
     <div><hr /></div>
     <div id="doCalcs">Do Calculations</div>
+    <div id="setLines">Set Lines</div>
+    <div><hr /></div>
+    <div id="needs">Needs Assesment</div>
     <div id="help">Help</div>
   </div>
   <script>
