--- a/CalcPadHelp.html
+++ b/CalcPadHelp.html
@@ -9,23 +9,47 @@
   <meta name="description" content="A Calculation Pad page." />
   <meta name="author" content="Lester J. Clark" />
   <meta name="viewport" content="width=device-width initial-scale=1" />
+  <link rel='stylesheet' type='text/css' href='CSS/CodeDoc.css' />
 </head>
 <body>
-  <p>
-    The CalcPad page is intended to be used for entering a set of simple
-    calculations.
-  </p>
-  <p>
-    These calculations can be copied and pasted to a local text file. They can
-    be copied from the text file and pasted back into the page later.
-  </p>
-  <p>
-    CalcPad accepts only four types of line statements. These statement types
-    and the required order are:
-  </p>
-  <a href="DataItem.html">Data Item Declaration</a><br />
-  <a href="Formula.html">Conversion Formula</a><br />
-  <a href="Assignment.html">Assignment</a><br />
-  <a href="Value.html">Output Value</a><br />
+  <div class="page">
+    <br />
+    <div class="PathText">
+      / <a href="CalcPad.html">Calculations</a>
+      / Home
+    </div>
+    <br />
+    <div id='Header'>
+      <div id='Title'>Calculation Pad</div>
+    </div>
+    <div class='Text'>
+      <p>
+        The CalcPad page is intended to be used for entering a set of simple
+        calculations.
+      </p>
+      <p>
+        These calculations can be copied and pasted to a local text file. They can
+        be copied from the text file and pasted back into the page later.
+      </p>
+      <p>
+        CalcPad accepts only four types of line statements. These statement types
+        and the required order are:
+      </p>
+      <a href="DataItem.html">Data Item Declaration</a><br />
+      <a href="Formula.html">Conversion Formula</a><br />
+      <a href="Assignment.html">Assignment</a><br />
+      <a href="Value.html">Output Value</a><br />
+    </div>
+    <!-- End Text -->
+    <br />
+    <div class="PathText">
+      / <a href="CalcPad.html">Calculations</a>
+      / Home
+    </div>
+    <br />
+    <div class='SmallText'>Copyright &copy; Lester J. Clark  and Contributors.</div>
+    <div class='SmallText'>Licensed under the MIT License.</div>
+  </div>
+  <!-- End page -->
 </body>
 </html>
