--- a/HTML/CalcPadHelp.html
+++ b/HTML/CalcPadHelp.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <!-- Copyright(c) Lester J. Clark and Contributors. -->
 <!-- Licensed under the MIT License.-->
-<!-- Formula.html -->
+<!-- CalcPadHelp.html -->
 <html lang="en">
 <head>
-  <title>Formula</title>
+  <title>CalcPad</title>
   <meta charset="utf-8" />
   <meta name="description" content="A Calculation Pad page." />
   <meta name="author" content="Lester J. Clark" />
@@ -15,40 +15,36 @@
   <div class="page">
     <br />
     <div class="PathText">
-      / <a href="CalcPad.html">Calculations</a>
-      / <a href="CalcPadHelp.html">Home</a>
-      / Formula
+      / <a href="../CalcPad.html">Calculations</a>
+      / Home
     </div>
     <br />
     <div id='Header'>
-      <div id='Title'>Converson Formula</div>
+      <div id='Title'>Calculation Pad</div>
     </div>
     <div class='Text'>
       <p>
-        A Conversion Formula is used to define a relationship between Data
-        Items. It has the following format.
+        The CalcPad page is intended to be used for entering a set of simple
+        calculations.
       </p>
       <p>
-        LeftItemName is # RightItemName
+        These calculations can be copied and pasted to a local text file. They can
+        be copied from the text file and pasted back into the page later.
       </p>
       <p>
-        The LeftItem will consist of a specific number of the RightItem.
+        CalcPad accepts only four types of line statements. These statement types
+        and the required order are:
       </p>
-      <p>
-        Family is 5 Persons
-      </p>
-      <p>
-        Here are two additional Conversion Formulas:
-      </p>
-      <pre>
-  Community is 16 Families
-  Village is 4 Communities</pre>
+      <a href="DataItem.html">Data Item Declaration</a><br />
+      <a href="Formula.html">Conversion Formula</a><br />
+      <a href="Assignment.html">Assignment</a><br />
+      <a href="Value.html">Output Value</a><br />
     </div>
     <!-- End Text -->
+    <br />
     <div class="PathText">
       / <a href="CalcPad.html">Calculations</a>
-      / <a href="CalcPadHelp.html">Home</a>
-      / Formula
+      / Home
     </div>
     <br />
     <div class='SmallText'>Copyright &copy; Lester J. Clark  and Contributors.</div>
