--- a/HTML/Value.html
+++ b/HTML/Value.html
@@ -15,7 +15,7 @@
   <div class="page">
     <br />
     <div class="PathText">
-      / <a href="CalcPad.html">Calculations</a>
+      / <a href="../CalcPad.html">Calculations</a>
       / <a href="CalcPadHelp.html">Home</a>
       / Value
     </div>
