--- a/CoreUtilities/CalcPad/CalcPadHTML/HTML/Value.html
+++ b/CoreUtilities/CalcPad/CalcPadHTML/HTML/Value.html
@@ -9,7 +9,7 @@
   <meta name="description" content="A Calculation Pad page." />
   <meta name="author" content="Lester J. Clark" />
   <meta name="viewport" content="width=device-width initial-scale=1" />
-  <link rel='stylesheet' type='text/css' href='CSS/CodeDoc.css' />
+  <link rel='stylesheet' type='text/css' href='../CSS/CodeDoc.css' />
 </head>
 <body>
   <div class="page">
