--- a/HTML/Value.html
+++ b/HTML/Value.html
@@ -90,17 +90,18 @@
   RefuseContainers = Families / 10
 
   // Show Calculated Needs
-  Value: Persons Ceiling
-  Value: Families Ceiling
-  Value: Communities Ceiling
-  Value: Villages Ceiling
-  Value: Tents Ceiling
-  Value: LitersOfWaterPerDay
-  Value: Taps Ceiling
-  Value: WaterCollectionContainers
-  Value: WaterStorageContainers
-  Value: Toilets Ceiling
-  Value: RefuseContainers Ceiling</pre>
+  Value: Persons Ceiling (500)
+  Value: Families Ceiling (100)
+  Value: Communities Ceiling (7)
+  Value: Villages Ceiling (2)
+  Value: Tents Ceiling (84)
+  Value: LitersOfWaterPerDay (7500)
+  Value: Taps Ceiling (4)
+  Value: WaterCollectionContainers (200)
+  Value: WaterStorageContainers (100)
+  Value: Toilets Ceiling (25)
+  Value: RefuseContainers Ceiling (10)</pre>
+
       <h5>Sample Units of Length Calculation Template</h5>
       <pre>
   kilometer|km
@@ -116,11 +117,11 @@
 
   meter = 1000
 
-  Value: km
-  Value: m
-  Value: cm
-  Value: mm
-  Value: ft</pre>
+  Value: km (1)
+  Value: m (1000)
+  Value: cm (100000)
+  Value: mm (1000000)
+  Value: ft round:2 (3280.84)</pre>
     </div>
     <!-- End Text -->
     <div class="PathText">
