--- a/CoreUtilities/CalcPad/CalcPadHTML/HTML/Assignment.html
+++ b/CoreUtilities/CalcPad/CalcPadHTML/HTML/Assignment.html
@@ -74,8 +74,8 @@
   // sin(angle) = o/h | multiply both sides by h | Sin(angle) * h = o
   x = cos(angle) * radius
   y = sin(angle) * radius
-  value: x round
-  value: y round</pre>
+  value: x round (3)
+  value: y round (4)</pre>
       <p>
         The Operation can be one of the following: "+", "-", "*", "/" or "^".
       </p>
