--- a/CoreUtilities/CalcPad/CalcPadHTML/HTML/Assignment.html
+++ b/CoreUtilities/CalcPad/CalcPadHTML/HTML/Assignment.html
@@ -102,7 +102,7 @@
     </div>
     <!-- End Text -->
     <div class="PathText">
-      / <a href="CalcPad.html">Calculations</a>
+      / <a href="../CalcPad.html">Calculations</a>
       / <a href="CalcPadHelp.html">Home</a>
       / Assignment
     </div>
