--- a/CoreUtilities/CalcPad/CalcPadHTML/HTML/CalcPadHelp.html
+++ b/CoreUtilities/CalcPad/CalcPadHTML/HTML/CalcPadHelp.html
@@ -43,7 +43,7 @@
     <!-- End Text -->
     <br />
     <div class="PathText">
-      / <a href="CalcPad.html">Calculations</a>
+      / <a href="../CalcPad.html">Calculations</a>
       / Home
     </div>
     <br />
