--- a/CoreUtilities/CalcPad/CalcPadHTML/HTML/DataItem.html
+++ b/CoreUtilities/CalcPad/CalcPadHTML/HTML/DataItem.html
@@ -58,7 +58,7 @@
     </div>
     <!-- End Text -->
     <div class="PathText">
-      / <a href="CalcPad.html">Calculations</a>
+      / <a href="../CalcPad.html">Calculations</a>
       / <a href="CalcPadHelp.html">Home</a>
       / DataItem
     </div>
