--- a/CoreUtilities/CalcPad/CalcPadHTML/HTML/Formula.html
+++ b/CoreUtilities/CalcPad/CalcPadHTML/HTML/Formula.html
@@ -46,7 +46,7 @@
     </div>
     <!-- End Text -->
     <div class="PathText">
-      / <a href="CalcPad.html">Calculations</a>
+      / <a href="../CalcPad.html">Calculations</a>
       / <a href="CalcPadHelp.html">Home</a>
       / Formula
     </div>
