--- a/HTML/Value.html
+++ b/HTML/Value.html
@@ -125,7 +125,7 @@
     </div>
     <!-- End Text -->
     <div class="PathText">
-      / <a href="CalcPad.html">Calculations</a>
+      / <a href="../CalcPad.html">Calculations</a>
       / <a href="CalcPadHelp.html">Home</a>
       / Value
     </div>
